04_Deploying/11-02_Deploy/app-svc.yaml
# Exercise 11-02 v2.2.1
#
---
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: app
  labels:
    app: app-app
    tier: appserver
spec:
  selector:
    pod: app-pod
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
