04_Deploying/11-02_Deploy/app-ing.yaml
# Exercise 10-02 v2.2.1
#
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ing 
  namespace: app
spec:
  rules:
    - host: app.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app-svc 
                port:
                  number: 8080
